2004-02-16  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Fix bug #134492
	
2004-02-15  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in, rsvg-styles.c: Fix bug #134292
	
2004-02-14  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: Fix bug #133947

2004-02-11  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c: added feComposite filter

2004-02-07  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-styles.[ch]: Implement get_font_size() function
	* rsvg-shapes.c: Use the above fn
	* rsvg-filter.c: Ditto
	
2004-02-06  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c: made gassian blur use 3 box blurs (technically 6 motion blurs) when the geometric mean of the standard deviations of the filter is over two. Misc enhancements in feConvolveMatrix
	
2004-02-05  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-filter.c: Made colormatrix a lot safer, added checking to make sure colvolvematrix doesn't segfault, fixed embarrasing little buglet in feOffset.
	* rsvg-filter.c: fixed table in feComponantTransfer, I won't pretend to know how I did it. It truely is an aweful hack, but its the best we have and it seems to work as per the examples
	
2004-02-04  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-filter.c: Fix bug in pixbuf_get_alpha(), speed up pixbuf_new_cleared(),
	be more paranoid in ComponentTransfer
	
2004-02-04  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-filter.c: Implemented the feMorphology filter

2004-02-04  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-filter.c: Implemented the ComponentTransfer filter, it works properly now
	
2004-02-03  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-filter.[ch]: Start implementing ComponentTransfer filter
	Indent, make code ansi-compliant.
	* rsvg-css.[ch]: Tweak VBOX parsing, free unused string array properly


2004-02-03  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-filter.c: Implemented ColorMatrix filter, Made GaussianBlur scaled according to the current coordinate system